name:                tree-writer
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Craig Roche
maintainer:          cdxr01@gmail.com
copyright:           Copyright (c) Craig Roche 2013
category:            Control
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     Control.Monad.TreeWriter
  -- other-modules:       
  build-depends:       base ==4.6.*, transformers ==0.3.*, containers ==0.5.*
